--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -8,8 +8,9 @@ set (PROJ_NAME common)
 
 PROJECT(${PROJ_NAME})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
-
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+  add_compile_options(-std=c++1y)
+endif()
 
 set (SRC src/DatasetMapLoader.cpp)
 
