--- a/libraries/dataset/CMakeLists.txt
+++ b/libraries/dataset/CMakeLists.txt
@@ -8,8 +8,9 @@ set (PROJ_NAME dataset)
 
 PROJECT(${PROJ_NAME})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
-
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+  add_compile_options(-std=c++1y)
+endif()
 
 set (SRC src/CompressedIntegerList.cpp
                  src/DenseDataVector.cpp
