--- a/print/CMakeLists.txt
+++ b/print/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-PROJECT(print)
+
+set (PROJ_NAME print)
+
+PROJECT(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -34,6 +37,7 @@ include_directories(../libraries/layers/include)
 include_directories(../libraries/types/include)
 include_directories(../libraries/utilities/include)
 
-add_executable(print ${SRC} ${INCLUDE})
-target_link_libraries(print utilities layers)
+add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
+
+target_link_libraries(${PROJ_NAME} utilities layers)
 
