--- a/tests/standalone_tree_layout/CMakeLists.txt
+++ b/tests/standalone_tree_layout/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-project(standalone_tree_layout)
+
+set (PROJ_NAME standalone_tree_layout)
+
+project(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -12,5 +15,8 @@ set (SRC standalone_tree_layout.cpp)
 include_directories(../../libraries/tree_layout/include)
 include_directories(../../libraries/types/include)
 
-add_executable(standalone_tree_layout ${SRC})
-target_link_libraries(standalone_tree_layout tree_layout)
+add_executable(${PROJ_NAME} ${SRC})
+
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tests")
+
+target_link_libraries(${PROJ_NAME} tree_layout)
