--- a/trainers/sgd/CMakeLists.txt
+++ b/trainers/sgd/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-PROJECT(sgd)
+
+set (PROJ_NAME sgd)
+
+PROJECT(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -25,5 +28,8 @@ include_directories(../../libraries/types/include)
 include_directories(../../libraries/utilities/include)
 
 
-add_executable(sgd ${SRC} ${INCLUDE})
-target_link_libraries(sgd common dataset layers linear loss_functions predictors optimization utilities)
+add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
+
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "trainers")
+
+target_link_libraries(${PROJ_NAME} common dataset layers linear loss_functions predictors optimization utilities)
