--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory(libraries/optimization)
 add_subdirectory(libraries/predictors)
 add_subdirectory(libraries/tree_layout)
 add_subdirectory(libraries/utilities)
-#add_subdirectory(apply)
+add_subdirectory(apply)
 add_subdirectory(compile)
 add_subdirectory(print)
 add_subdirectory(tests/linear_test)
