--- a/apply/CMakeLists.txt
+++ b/apply/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-project(apply)
+
+set (PROJ_NAME apply)
+
+project(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -13,5 +16,6 @@ include_directories(../libraries/layers/include)
 include_directories(../libraries/types/include)
 include_directories(../libraries/utilities/include)
 
-add_executable(apply ${SRC})
-target_link_libraries(apply utilities layers)
+add_executable(${PROJ_NAME} ${SRC})
+
+target_link_libraries(${PROJ_NAME} utilities layers)
