--- a/tests/test/CMakeLists.txt
+++ b/tests/test/CMakeLists.txt
@@ -3,7 +3,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-project(test_exe)
+
+set (PROJ_NAME test_exe)
+
+project(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -11,7 +14,9 @@ set (SRC test.cpp)
 
 include_directories(../../libraries/utilities/include)
 
-add_executable(test_exe ${SRC})
+add_executable(${PROJ_NAME} ${SRC})
 
-target_link_libraries(test_exe utilities)
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tests")
+
+target_link_libraries(${PROJ_NAME} utilities)
 
