--- a/apply/CMakeLists.txt
+++ b/apply/CMakeLists.txt
@@ -14,10 +14,13 @@ endif()
 
 set (SRC src/main.cpp)
 
+include_directories(../libraries/linear/include)
 include_directories(../libraries/layers/include)
+include_directories(../libraries/dataset/include)
+include_directories(../libraries/common/include)
 include_directories(../libraries/types/include)
 include_directories(../libraries/utilities/include)
 
 add_executable(${PROJ_NAME} ${SRC})
 
-target_link_libraries(${PROJ_NAME} utilities layers)
+target_link_libraries(${PROJ_NAME} utilities layers linear common dataset)
