--- a/libraries/optimization/CMakeLists.txt
+++ b/libraries/optimization/CMakeLists.txt
@@ -8,7 +8,7 @@ set (PROJ_NAME optimization)
 
 PROJECT(${PROJ_NAME})
 
-if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES Clang)
   add_compile_options(-std=c++1y)
 endif()
 
