--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -51,3 +51,17 @@ include_directories(../types/include)
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
+
+#
+# test project
+#
+
+set (TEST_NAME ${PROJ_NAME}_test)
+
+add_executable(${TEST_NAME} test/test.cpp ${INCLUDE})
+
+target_link_libraries(${TEST_NAME} dataset linear)
+
+set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
+
+add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
