--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(libraries/linear)
 add_subdirectory(libraries/loss_functions)
 add_subdirectory(libraries/optimization)
 add_subdirectory(libraries/predictors)
+add_subdirectory(libraries/testing)
 add_subdirectory(libraries/tree_layout)
 add_subdirectory(libraries/utilities)
 add_subdirectory(apply)
