--- a/libraries/loss_functions/CMakeLists.txt
+++ b/libraries/loss_functions/CMakeLists.txt
@@ -37,9 +37,11 @@ set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
 set (TEST_NAME ${PROJ_NAME}_test)
 
+include_directories(../testing/include)
+
 add_executable(${TEST_NAME} test/test.cpp ${INCLUDE})
 
-target_link_libraries(${TEST_NAME} loss_functions)
+target_link_libraries(${TEST_NAME} loss_functions testing)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
 
