--- a/trainers/sgd/CMakeLists.txt
+++ b/trainers/sgd/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(../../libraries/common/include)
 include_directories(../../libraries/dataset/include)
 include_directories(../../libraries/layers/include)
 include_directories(../../libraries/linear/include)
-include_directories(../../libraries/loss_functions/include)
+include_directories(../../libraries/lossFunctions/include)
 include_directories(../../libraries/predictors/include)
 include_directories(../../libraries/optimization/include)
 include_directories(../../libraries/types/include)
@@ -34,7 +34,7 @@ include_directories(../../libraries/utilities/include)
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
-target_link_libraries(${PROJ_NAME} common dataset layers linear loss_functions predictors optimization utilities)
+target_link_libraries(${PROJ_NAME} common dataset layers linear lossFunctions predictors optimization utilities)
 
 # put this project in the trainers folder in the IDE 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "trainers")
