--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,16 +19,16 @@ add_subdirectory(libraries/common)
 add_subdirectory(libraries/dataset)
 add_subdirectory(libraries/layers)
 add_subdirectory(libraries/linear)
-add_subdirectory(libraries/loss_functions)
+add_subdirectory(libraries/lossFunctions)
 add_subdirectory(libraries/optimization)
 add_subdirectory(libraries/predictors)
 add_subdirectory(libraries/testing)
-add_subdirectory(libraries/tree_layout)
+add_subdirectory(libraries/treeLayout)
 add_subdirectory(libraries/utilities)
 add_subdirectory(apply)
 add_subdirectory(compile)
 add_subdirectory(print)
-add_subdirectory(tests/standalone_tree_layout)
+add_subdirectory(tests/standalone_treeLayout)
 add_subdirectory(tests/test)
 add_subdirectory(trainers/sgd)
 add_subdirectory(scripts)
