--- a/libraries/lossFunctions/CMakeLists.txt
+++ b/libraries/lossFunctions/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
-set (PROJ_NAME tree_layout)
+set (PROJ_NAME lossFunctions)
 
 PROJECT(${PROJ_NAME})
 
@@ -12,23 +12,22 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/Layout.cpp
-         src/QpLayoutGenerator.cpp)
+set (SRC src/HingeLoss.cpp
+         src/LogLoss.cpp
+         src/SquaredLoss.cpp)
 
-set (INCLUDE include/Layout.h
-             include/QpLayoutGenerator.h)
+set (INCLUDE include/HingeLoss.h
+             include/LogLoss.h
+             include/SquaredLoss.h)
 
-set (TCC tcc/QpLayoutGenerator.tcc)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
-source_group("tcc" FILES ${TCC})
 
 include_directories(include)
-include_directories(tcc)
 include_directories(../types/include)
 
-add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
+add_library(${PROJ_NAME} ${SRC} ${INCLUDE})
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
@@ -38,11 +37,12 @@ set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
 set (TEST_NAME ${PROJ_NAME}_test)
 
+include_directories(../testing/include)
+
 add_executable(${TEST_NAME} test/test.cpp ${INCLUDE})
 
-target_link_libraries(${TEST_NAME} dataset linear)
+target_link_libraries(${TEST_NAME} lossFunctions testing)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
 
 add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
-
