--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,9 +12,17 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/Loaders.cpp)
+set (SRC src/DataLoadArguments.cpp
+         src/DataSaveArguments.cpp
+         src/Loaders.cpp
+         src/MapLoadArguments.cpp
+         src/MapSaveArguments.cpp)
 
-set (INCLUDE include/Loaders.h)
+set (INCLUDE include/DataLoadArguments.h
+             include/DataSaveArguments.h
+             include/Loaders.h
+             include/MapLoadArguments.h
+             include/MapSaveArguments.h)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
