--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,13 +12,15 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/DataLoadArguments.cpp
+set (SRC src/CoordinateListFactory.cpp
+         src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/Loaders.cpp
          src/MapLoadArguments.cpp
          src/MapSaveArguments.cpp)
 
-set (INCLUDE include/DataLoadArguments.h
+set (INCLUDE include/CoordinateListFactory.h
+             include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/Loaders.h
              include/MapLoadArguments.h
