Half way through change of how Layer/Map works

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,14 +12,14 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/CoordinateListFactory.cpp
+set (SRC src/CoordinateListTools.cpp
          src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/Loaders.cpp
          src/MapLoadArguments.cpp
          src/MapSaveArguments.cpp)
 
-set (INCLUDE include/CoordinateListFactory.h
+set (INCLUDE include/CoordinateListTools.h
              include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/Loaders.h
