--- a/print/CMakeLists.txt
+++ b/print/CMakeLists.txt
@@ -13,22 +13,22 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/HorizontalLayout.cpp
-               src/PrintableCoordinatewise.cpp
-               src/PrintableEmpty.cpp
+set (SRC src/LayerLayout.cpp
                src/PrintableInput.cpp
                src/PrintableMap.cpp
+               src/PrintableScale.cpp
+               src/PrintableShift.cpp
                src/PrintableSum.cpp
                src/main.cpp
                src/svgHelpers.cpp)
 
 set (INCLUDE include/CommandLineArguments.h
-                   include/HorizontalLayout.h
+                   include/LayerLayout.h
                    include/IPrintableLayer.h
-                   include/PrintableCoordinatewise.h
-                   include/PrintableEmpty.h
                    include/PrintableInput.h
                    include/PrintableMap.h
+                   include/PrintableScale.h
+                   include/PrintableShift.h
                    include/PrintableSum.h
                    include/svgHelpers.h)
          
