--- a/print/CMakeLists.txt
+++ b/print/CMakeLists.txt
@@ -38,10 +38,11 @@ include_directories(include)
 include_directories(../libraries/layers/include)
 include_directories(../libraries/types/include)
 include_directories(../libraries/utilities/include)
+include_directories(../libraries/common/include)
 
 # create executable in build\bin
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
-target_link_libraries(${PROJ_NAME} utilities layers)
+target_link_libraries(${PROJ_NAME} utilities layers common)
 
