moved coordinateListTools to layers project

--- a/libraries/layers/CMakeLists.txt
+++ b/libraries/layers/CMakeLists.txt
@@ -13,6 +13,7 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
 endif()
 
 set (SRC src/Coordinate.cpp
+         src/CoordinateListTools.cpp
          src/Coordinatewise.cpp
          src/Input.cpp
          src/Layer.cpp
@@ -22,6 +23,7 @@ set (SRC src/Coordinate.cpp
          src/Sum.cpp)
 
 set (INCLUDE include/Coordinate.h
+             include/CoordinateListTools.h
              include/Coordinatewise.h
              include/Input.h
              include/Layer.h
