--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,15 +12,13 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/CoordinateListTools.cpp
-         src/DataLoadArguments.cpp
+set (SRC src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/DataLoaders.cpp
          src/MapLoadArguments.cpp
          src/MapSaveArguments.cpp)
 
-set (INCLUDE include/CoordinateListTools.h
-             include/DataLoadArguments.h
+set (INCLUDE include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/DataLoaders.h
              include/MapLoadArguments.h
