Moved IteratortAdapter to its own file.

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -24,6 +24,7 @@ set (INCLUDE include/BinaryClassificationEvaluator.h
                        include/CommandLineParser.h
                        include/IIterator.h
                        include/IntegerStack.h
+					   include/IteratorAdapter.h
                        include/JsonSerializer.h
                        include/ParallelTransformIterator.h
                        include/Parser.h
