Cleanup of Iterator classes: Renamed IteratorAdapter to StlIteratorAdapter. Merged VectorIterator and StlIteratorAdapter. Made IIterator::Get() be const. Moved implementation of StlIteratorAdapter to tcc file.

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -24,15 +24,14 @@ set (INCLUDE include/BinaryClassificationEvaluator.h
                        include/CommandLineParser.h
                        include/IIterator.h
                        include/IntegerStack.h
-					   include/IteratorAdapter.h
                        include/JsonSerializer.h
                        include/ParallelTransformIterator.h
                        include/Parser.h
                        include/TransformIterator.h
                        include/files.h
                        include/Format.h
-                       include/randomEngines.h
-                       include/VectorIterator.h)
+					   include/StlIteratorAdapter.h
+                       include/randomEngines.h)
 
 set (TCC tcc/BinaryClassificationEvaluator.tcc
                    tcc/CommandLineParser.tcc
@@ -41,7 +40,7 @@ set (TCC tcc/BinaryClassificationEvaluator.tcc
                    tcc/Parser.tcc
                    tcc/TransformIterator.tcc
                    tcc/Format.tcc
-                   tcc/VectorIterator.tcc)
+                   tcc/StlIteratorAdapter.tcc)
                    
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
