Removed RealArray methods: Converting c'tor, Set, Clear, Print

--- a/libraries/linear/CMakeLists.txt
+++ b/libraries/linear/CMakeLists.txt
@@ -29,6 +29,7 @@ set (INCLUDE include/Base.h
              include/RowMatrix.h)
 
 set (TCC tcc/BiMatrix.tcc
+         tcc/DoubleVector.tcc
          tcc/RowMatrix.tcc)
 
 source_group("src" FILES ${SRC})
